Texto README.md

--- a/README.html
+++ b/README.html
@@ -131,11 +131,14 @@ $(document).ready(function () {
 </div>
 <div id="solucao-proposta" class="section level2">
 <h2>Solução proposta</h2>
-<p>Computar as distâncias utilizando a tecnologia do projeto <a href="http://project-osrm.org/">OSRM</a>.</p>
-<div id="apoio" class="section level3">
-<h3>Apoio</h3>
-<p>Recebemos U$ 100 em créditos da <a href="https://www.digitalocean.com/">Digital Ocean</a> para hospedarmos um servidor.</p>
+<ul>
+<li>Coordenadas dos municípios pelo <a href="http://wiki.openstreetmap.org/wiki/Nominatim">Nominatim</a></li>
+<li>Computar as distâncias utilizando a tecnologia do projeto <a href="http://project-osrm.org/">OSRM</a></li>
+</ul>
 </div>
+<div id="apoio" class="section level2">
+<h2>Apoio</h2>
+<p>Recebemos U$ 100 em créditos da <a href="https://www.digitalocean.com/">Digital Ocean</a> para hospedarmos um servidor.</p>
 </div>
 </div>
 
